<resources>
    <string name="app_name">Aerovo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="tag_from_view_tekst">tagID</string>
    <string name="Random_button_text">Random</string>
    <string name="previous">Previous</string>

    <!--API strings-->
    <string name="api_base_url">https://aerovo.ddns.net/</string>
    <string name="api_login">login/simplelogin.php</string>
    <string name="api_register">login/simpleregister.php</string>
    <string name="api_getaerovo">getaerovo.php</string>



    <string name="description_logo">Aerovo logo</string>
    <string name="Aerovo">Aerovo</string>
    <string name="MainTestButton">Main test button</string>
    <string name="Mijn_Aerovo">Mijn Aerovo\'s</string>
    <string name="Meldingen">Meldingen</string>
    <string name="instellingen">Instellingen</string>
    <string name="Grafiek">Grafieken</string>
    <string name="toevoegen">Toevoegen +</string>
    <string name="aerovo_naam">Aerovo %d</string>
    <string name="aerovo_locatie">%s</string>
    <string name="aerovo_postcode">Postcode: %s</string>
    <string name="aerovo_foto">aerovo foto</string>
    <string name="Recente_meldingen">Recente meldingen</string>
    <string name="notificatie_instellingen">Notificatie instellingen</string>
    <string name="Consent">Toestemming delen van meetgegevens</string>
    <string name="account_verwijderen">Account verwijderen</string>
    <string name="contact_header">-\ \ \ \ \ Contact gegevens</string>
    <string name="tel_en_mail">Telefoonnummer: 020 240 1958\nEmail:Support@aerovo.nl</string>
    <string name="verwijderen_bevestiging">Weet je zeker dat je je account wilt verwijderen?\nLet op dit kan niet ongedaan worden.</string>
    <string name="ja">Ja</string>
    <string name="nee">Nee</string>
    <string name="notificaties">Notificaties</string>
    <string name="tijd">-   Tijd</string>
    <string name="van">Van:</string>
    <string name="tot">Tot:</string>
    <string name="dagen">-\ \ \ \ \ Dagen</string>
    <string name="maandag">Maandag</string>
    <string name="dinsdag">Dinsdag</string>
    <string name="woensdag">Woensdag</string>
    <string name="donderdag">Donderdag</string>
    <string name="vrijdag">Vrijdag</string>
    <string name="zaterdag">Zaterdag</string>
    <string name="zondag">Zondag</string>
    <string name="clear">clear</string>
    <string name="opslaan">Opslaan</string>
    <string name="laad_grafiek">Laad grafiek</string>
    <string name="geen_aerovo">U heeft nog geen Aerovo\'s toegevoegd</string>
    <string name="geen_meldingen">U heeft momenteel geen meldingen</string>
    <string name="melding_placeholder">Melding placeholder %d</string>


    <!--Grafiek-->
    <string name="temperatuur_celsius">Temperatuur in ℃</string>
    <string name="zuurstof">Zuurstof waarde in PPM</string>
    <string name="fijnstof">Fijnstof waarde in PPM</string>
    <string name="koolstof">CO₂ waarde in PPM</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Wachtwoord</string>
    <string name="prompt_password2">Herhaal wachtwoord</string>
    <string name="action_sign_in">Nu inloggen</string>
    <string name="make_account">Maak account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">Instellingen</string>
    <string name="nieuw_account">Nieuw bij Aerovo? Aanmelden</string>


    <string name="enter_name">Voer naam in</string>
    <string name="enter_username">Voer gebruikersnaam in</string>
    <string name="enter_password">Voer wachtwoord in</string>
    <string name="register">Register</string>
    <string name="not_registered">Nog geen account? Klik dan hier</string>


    <string name="Naam">Naam</string>
    <string name="Email2">Email</string>
    <string name="NieuwWachtwoord">Wachtwoord</string>
    <string name="registreer">Registreren</string>
    <string name="BestaandAccount">Heeft u al een Account? Klik hier om in te loggen!</string>
    <string name="MaakAccount">Klik hier om een nieuw account te maken!</string>
    <string name="NuInloggen">Nu inloggen</string>
    <string name="wachtwoord">Wachtwoord</string>
    <string name="email">Email</string>
    <string name="Welkom">Welkom</string>
    <string name="hobby">Hobby</string>
    <string name="Uitloggen">Uitloggen</string>


</resources>
