<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/aerovo_naam_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/aerovo_naam"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/aerovo_foto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/custom_locatie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/aerovo_locatie"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/aerovo_foto"
        app:layout_constraintStart_toStartOf="@+id/aerovo_naam_textview"
        app:layout_constraintTop_toBottomOf="@+id/aerovo_naam_textview" />


    <TextView
        android:id="@+id/postcode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/aerovo_postcode"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/aerovo_foto"
        app:layout_constraintStart_toStartOf="@+id/aerovo_naam_textview"
        app:layout_constraintTop_toBottomOf="@+id/custom_locatie" />

    <ImageView
        android:id="@+id/aerovo_foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/aerovo_foto"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
