<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/include_topBar_login"
        layout="@layout/top_bar"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etemail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:background="#fff"
        android:hint="@string/email"
        android:paddingLeft="5dp"
        app:layout_constraintTop_toBottomOf="@id/include_topBar_login"/>

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="#fff"
        android:hint="@string/wachtwoord"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        app:layout_constraintTop_toBottomOf="@id/etemail"/>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="?attr/colorButtonNormal"
        android:text="@string/NuInloggen"
        android:textColor="#000"
        app:layout_constraintTop_toBottomOf="@id/etpassword"/>

    <TextView
        android:id="@+id/tvreg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/MaakAccount"
        android:textColor="@color/aerovo_blauw"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>