<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppInstellingen">

    <TextView
        android:id="@+id/delete_check_tekst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verwijderen_bevestiging"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/nee_knop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nee"
        android:onClick="dontDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ja_knop"
        app:layout_constraintTop_toBottomOf="@id/delete_check_tekst"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/ja_knop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ja"
        android:onClick="deleteAccount"
        app:layout_constraintStart_toEndOf="@id/nee_knop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/nee_knop"/>
</androidx.constraintlayout.widget.ConstraintLayout>