<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppInstellingen">

    <include
        android:id="@+id/include_topBar_appInstellingen"
        layout="@layout/top_bar"
        android:layout_width="0dp"
        android:layout_height="122dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menu_button_main"
        android:layout_width="131dp"
        android:layout_height="122dp"
        android:background="#00FBFBFB"
        android:onClick="showMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/notificatieInstellingen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/notificatie_instellingen"
        android:onClick="gotoNotificatieInstellingen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include_topBar_appInstellingen" />


    <Switch
        android:id="@+id/consent_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="end"
        android:onClick="changeConsent"
        android:switchPadding="24dp"
        android:text="@string/Consent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificatieInstellingen_button" />


    <Button
        android:id="@+id/verwijder_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_verwijderen"
        android:onClick="popUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/consent_switch"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/contact_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_header"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@id/tel_en_mail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/verwijder_account_button"/>

    <TextView
        android:id="@+id/tel_en_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel_en_mail"
        app:layout_constraintTop_toBottomOf="@id/contact_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <include
        android:id="@+id/include_delete_check"
        layout="@layout/activity_verwijder_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--TODO add account verwijderern button & contact scherm mockup 19-->


</androidx.constraintlayout.widget.ConstraintLayout>